rename landing page to index

--- a/testForm.html
+++ b/testForm.html
@@ -10,6 +10,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
    <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
    <link rel="stylesheet" href="testForm.css">
+   <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
   </head>
 
 </head>
@@ -54,20 +55,7 @@
     </div>
   </form>
  </div>
- <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
- <script type='text/javascript'>
-  (function($) {
-    window.fnames = new Array();
-    window.ftypes = new Array();
-    fnames[0]='EMAIL';
-    ftypes[0]='email';
-    fnames[1]='FNAME';
-    ftypes[1]='text';
-    fnames[2]='LNAME';
-    ftypes[2]='text';
-  }(jQuery));
-  var $mcj = jQuery.noConflict(true);
-</script>
+ <script type='text/javascript' src='testForm.js'></script>
  <!--End mc_embed_signup--> 
 
 
