--- a/index.html
+++ b/index.html
@@ -55,34 +55,46 @@
 
     <h1>Landing Page</h1>
     <p>Please fill this form :</p>
-    <form>
-        <div>
-            <label for="text">Text Input</label>
-            <input type="text" id="text" required>
-        </div>
-
-        <div>
-            <label for="minmaxlength">Text with Min and Max Length</label>
-            <input type="text" id="minmaxlength" minlength="3" maxlength="12">
-        </div>
-
-        <div>
-            <label for="password">Password (must contain at least 1 uppercase character, 1 lowercase character, and 1 number)</label>
-            <input type="password" id="password" pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?!.*\s).*$" required>
-        </div>
-
-        <div>
-            <label for="passwordwithtitle">Password with Title Attribute</label>
-            <input type="password" id="passwordwithtitle" pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?!.*\s).*$" title="Please include at least 1 uppercase character, 1 lowercase character, and 1 number." required>
-        </div>
-
-        <div>
-            <label for="passwordcombined">Password with Pattern and Min Length</label>
-            <input type="password" id="passwordcombined" minlength="8" pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?!.*\s).*$" title="Please include at least 1 uppercase character, 1 lowercase character, and 1 number." required>
-        </div>
-
-        <input type="submit" class="button" value="Submit">
-    </form>
+    <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
+ 
+    <div id="mc_embed_signup">
+     <form action="https://berkeley.us20.list-manage.com/subscribe/post?u=f5514aab48007df48a9f03e7f&amp;id=da7a0df442" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" >
+       <div id="mc_embed_signup_scroll">
+         <h2>Subscribe to our mailing list</h2>
+         <div class="indicates-required">
+           <span class="asterisk">*</span> indicates required
+         </div>
+         <div class="mc-field-group">
+             <label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
+         </label>
+             <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+         </div>
+         <div class="mc-field-group">
+             <label for="mce-FNAME">
+               First Name <span class="asterisk">*</span>
+             </label>
+             <input type="text" value="" name="FNAME" class="required" id="mce-FNAME" pattern="[A-Za-z]{2,32}" minlength="2" maxlength="15" title="Please Put in a Valid First Name">
+         </div>
+         <div class="mc-field-group">
+           <label for="mce-LNAME">
+             Last Name  <span class="asterisk">*</span>
+           </label>
+           <input type="text" value="" name="LNAME" class="required" id="mce-LNAME" pattern="[A-Za-z]{2,32}"   title="Please Put in a Valid Last Name">
+         </div>
+         <div id="mce-responses" class="clear">
+           <div class="response" id="mce-error-response" style="display:none"></div>
+           <div class="response" id="mce-success-response" style="display:none"></div>
+         </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+         <div style="position: absolute; left: -5000px;" aria-hidden="true">
+           <input type="text" name="b_f5514aab48007df48a9f03e7f_da7a0df442" tabindex="-1" value="">
+         </div>
+         <div class="clear">
+           <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button">
+         </div>
+       </div>
+     </form>
+    </div>
+    <!--End mc_embed_signup--> 
     <script type='text/javascript' src='testForm.js'></script>
 </body>
 </html>
