--- a/index.html
+++ b/index.html
@@ -5,14 +5,15 @@
     <title>LineTime</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="landing.css">
-    <!-- materialize  -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script> 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"> 
+    <link rel="stylesheet" href="index.css">
+   
+  
+  <!-- bootstrap -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   </head>
 
 <body>
@@ -39,21 +40,76 @@
               </ul>
             </div>
           </nav>
-
+      
 <!-- carousel -->
-
-        <div class="carousel">
-            <a class="carousel-item" href="#one!"><img src="https://lorempixel.com/250/250/nature/1"></a>
-            <a class="carousel-item" href="#two!"><img src="https://lorempixel.com/250/250/nature/2"></a>
-            <a class="carousel-item" href="#three!"><img src="https://lorempixel.com/250/250/nature/3"></a>
-            <a class="carousel-item" href="#four!"><img src="https://lorempixel.com/250/250/nature/4"></a>
-            <a class="carousel-item" href="#five!"><img src="https://lorempixel.com/250/250/nature/5"></a>
+<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+            <img class="d-block w-100" src="./images/chinatown.png" alt="First slide">
         </div>
+        <div class="carousel-item">
+            <img class="d-block w-100" src="./images/hotdog.png" alt="Second slide">
+        </div>
+        <div class="carousel-item">
+            <img class="d-block w-100" src="./images/chinatown.png" alt="Third slide">
+        </div>
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+    </a>
+</div>
+
+<h1>Landing Page</h1>
+<!---------- How it works------------- -->
+<div class ="row">  
+    <br><br>
+  <!-- -----picture3 -->
+      <div class="col-sm-12 col-md-4">
+        <div class="thumbnail">
+          <img src="https://lorempixel.com/250/250/nature/1">
+          <div class="caption">
+            <h3>Part1</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem harum obcaecati voluptatum aut animi iure. Cupiditate aut consequuntur repellendus ea similique. A hic pariatur laboriosam. Quod sint id qui similique? </p>
+            <button >Button </button>
+            <p><a href="mailto:huggy">Send me an email!</a></p>
+          </div>
+        </div>
+      </div>
+  <!-- -------picture2-->
+      <div class="col-sm-12 col-md-4">
+        <div class="thumbnail">
+            <img src="https://lorempixel.com/250/250/nature/1">
+          <div class="caption">
+            <h3>Part2</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus corrupti expedita velit incidunt, magnam porro aspernatur ducimus nisi earum vero, animi enim fugiat minus aut dicta asperiores eveniet quasi quo.</p>
+            <button >Button </button>
+            <p><a href="mailto:alom">Send me an email!</a></p>
+          </div>
+        </div>
+    </div>
+  <!-- --------picture3 ------>
+      <div class="col-sm-12 col-md-4">
+        <div class="thumbnail">
+            <img src="https://lorempixel.com/250/250/nature/1">
+          <div class="caption">
+            <h3>Part 3</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio ipsam omnis vel accusantium corporis, sunt ea ipsum ipsa aperiam veniam molestiae reiciendis laborum reprehenderit hic aliquam fuga laudantium placeat sit!</p>
+            <button >Button </button>
+            <p><a href="mailto:alom">Send me an email!</a></p>
+          </div>
+        </div>
+      </div>
+  </div>
                 
 
 <!-- form  -->
 
-    <h1>Landing Page</h1>
+  
     <p>Please fill this form :</p>
     <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
  
