--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
     </a>
 </div>
 
-<h1>Landing Page</h1>
+<h1>How It Works</h1>
 <!---------- How it works------------- -->
 <main id='main'role="main"> 
 <div class ="row">  
@@ -149,12 +149,10 @@
       <div class="col-sm-12 col-md-4">
           <article role="article"> 
         <div class="thumbnail">
-          <img src="https://lorempixel.com/250/250/nature/1">
+          <img src="images/HAND-img.png">
           <div class="caption">
-            <h3>Part1</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem harum obcaecati voluptatum aut animi iure. Cupiditate aut consequuntur repellendus ea similique. A hic pariatur laboriosam. Quod sint id qui similique? </p>
-            <button >Button </button>
-            <p><a href="mailto:huggy">Send me an email!</a></p>
+            <h3>Choose Your Job</h3>
+            <p>Sign up to browse and book available stand-in appointments</p>
           </div>
         </div>
         </article>
@@ -163,12 +161,10 @@
       <div class="col-sm-12 col-md-4">
           <article role="article"> 
         <div class="thumbnail">
-            <img src="https://lorempixel.com/250/250/nature/1">
+            <img src="images/PPL-img.png">
           <div class="caption">
-            <h3>Part2</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus corrupti expedita velit incidunt, magnam porro aspernatur ducimus nisi earum vero, animi enim fugiat minus aut dicta asperiores eveniet quasi quo.</p>
-            <button >Button </button>
-            <p><a href="mailto:alom">Send me an email!</a></p>
+            <h3>Stand in Line </h3>
+            <p>Notify your doppelgänger by texting "Almost There!" when you're less than 30 mintues from the front of the line </p>
           </div>
         </div>
         </article>
@@ -177,12 +173,10 @@
       <div class="col-sm-12 col-md-4">
           <article role="article"> 
         <div class="thumbnail">
-            <img src="https://lorempixel.com/250/250/nature/1">
+            <img src="images/MONEY-img.png">
           <div class="caption">
-            <h3>Part 3</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio ipsam omnis vel accusantium corporis, sunt ea ipsum ipsa aperiam veniam molestiae reiciendis laborum reprehenderit hic aliquam fuga laudantium placeat sit!</p>
-            <button >Button </button>
-            <p><a href="mailto:alom">Send me an email!</a></p>
+            <h3>Receive Your Direct Deposit</h3>
+            <p>Once we are notified that your job is complete, you will receive an automatic payment directly to your linked bank account</p>
           </div>
         </div>
         </article>
