--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
     </a>
 </div>
 
-<h1>How It Works</h1>
+<h1 class="content">How It Works</h1>
 <!---------- How it works------------- -->
 <main id='main'role="main"> 
 <div class ="row">  
