added spacing and margins to how it wrks content

--- a/index.html
+++ b/index.html
@@ -186,33 +186,34 @@
 
 <!-- form  -->
 
-  
-    <p>Please fill this form :</p>
     <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
  
     <div id="mc_embed_signup">
      <form action="https://berkeley.us20.list-manage.com/subscribe/post?u=f5514aab48007df48a9f03e7f&amp;id=da7a0df442" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" >
        <div id="mc_embed_signup_scroll">
-         <h2>Subscribe to our mailing list</h2>
+         <h5>Subscribe to keep up with our latest updates</h5>
          <div class="indicates-required">
            <span class="asterisk">*</span> indicates required
          </div>
          <div class="mc-field-group">
-             <label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
+             <!-- <label for="mce-EMAIL">Email Address  <span class="asterisk">*</span> -->
          </label>
-             <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+             <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL"
+             placeholder="Email *">
          </div>
          <div class="mc-field-group">
-             <label for="mce-FNAME">
+             <!-- <label for="mce-FNAME">
                First Name <span class="asterisk">*</span>
-             </label>
-             <input type="text" value="" name="FNAME" class="required" id="mce-FNAME" pattern="[A-Za-z]{2,32}" minlength="2" maxlength="15" title="Please Put in a Valid First Name">
+             </label> -->
+             <input type="text" value="" name="FNAME" class="required" id="mce-FNAME" pattern="[A-Za-z]{2,32}" minlength="2" maxlength="15" title="Please Put in a Valid First Name"
+             placeholder="First Name *">
          </div>
          <div class="mc-field-group">
-           <label for="mce-LNAME">
+           <!-- <label for="mce-LNAME">
              Last Name  <span class="asterisk">*</span>
-           </label>
-           <input type="text" value="" name="LNAME" class="required" id="mce-LNAME" pattern="[A-Za-z]{2,32}"   title="Please Put in a Valid Last Name">
+           </label> -->
+           <input type="text" value="" name="LNAME" class="required" id="mce-LNAME" pattern="[A-Za-z]{2,32}"   title="Please Put in a Valid Last Name"
+           placeholder="Last Name *">
          </div>
          <div id="mce-responses" class="clear">
            <div class="response" id="mce-error-response" style="display:none"></div>
