--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link rel="stylesheet" href="index.css">
+    <link href="https://fonts.googleapis.com/css?family=Quicksand:400,700" rel="stylesheet">
 
     <!-- bootstrap -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -191,9 +192,9 @@
     <div id="mc_embed_signup">
      <form action="https://berkeley.us20.list-manage.com/subscribe/post?u=f5514aab48007df48a9f03e7f&amp;id=da7a0df442" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" >
        <div id="mc_embed_signup_scroll">
-         <h5>Subscribe to keep up with our latest updates</h5>
+         <h5 class="updates">Subscribe to keep up with our latest updates</h5>
          <div class="indicates-required">
-           <span class="asterisk">*</span> indicates required
+           <!-- <span class="asterisk">*</span> indicates required -->
          </div>
          <div class="mc-field-group">
              <!-- <label for="mce-EMAIL">Email Address  <span class="asterisk">*</span> -->
