changed the opacity of placeholder text

--- a/index.html
+++ b/index.html
@@ -200,21 +200,21 @@
              <!-- <label for="mce-EMAIL">Email Address  <span class="asterisk">*</span> -->
          </label>
              <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL"
-             placeholder="Email *">
+             placeholder="Email">
          </div>
          <div class="mc-field-group">
              <!-- <label for="mce-FNAME">
                First Name <span class="asterisk">*</span>
              </label> -->
              <input type="text" value="" name="FNAME" class="required" id="mce-FNAME" pattern="[A-Za-z]{2,32}" minlength="2" maxlength="15" title="Please Put in a Valid First Name"
-             placeholder="First Name *">
+             placeholder="First Name">
          </div>
          <div class="mc-field-group">
            <!-- <label for="mce-LNAME">
              Last Name  <span class="asterisk">*</span>
            </label> -->
            <input type="text" value="" name="LNAME" class="required" id="mce-LNAME" pattern="[A-Za-z]{2,32}"   title="Please Put in a Valid Last Name"
-           placeholder="Last Name *">
+           placeholder="Last Name">
          </div>
          <div id="mce-responses" class="clear">
            <div class="response" id="mce-error-response" style="display:none"></div>
