added first image for the carosel

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
   <div class="carousel-inner">
     
       <div class="carousel-item active">
-          <img class="d-block w-100" src="./images/chinatown.png" alt="First slide">
+          <img class="d-block w-100" src="./images/SLIDE-1.png" alt="First slide">
       </div>
   
      
