--- a/index.html
+++ b/index.html
@@ -102,10 +102,10 @@
           <img class="d-block w-100" src="./images/SLIDE-1.png" alt="First slide">
       </div>
       <div class="carousel-item">
-          <img class="d-block w-100" src="./images/hotdog.png" alt="Second slide">
+          <img class="d-block w-100" src="./images/quote_2.png" alt="Second slide">
       </div>
       <div class="carousel-item">
-          <!-- <img class="d-block w-100" src="./images/chinatown.png" alt="Third slide"> -->
+          <img class="d-block w-100" src="./images/quote_3.png" alt="Third slide">
           
       </div>
   </div>
